--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -37,8 +37,8 @@
 }
 
 body {
-  font-family: "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial,
+    sans-serif;
   background: var(--background);
   color: var(--foreground);
   background-color: #eeeeee;
